# hello-sdl2-ios6

./: .gitignore  CMakeLists.txt  README.md
include/hello/: hello.h  shaders.h
libs/SDL/include/: SDL_revision.h
src/: main.c  shaders.c
